fixed mobile width overflow

--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -120,7 +120,7 @@ div.navbar .nav-brand{
     
     color: var(--secondary-color);
     font-weight:bolder !important;
-    font-size: 30px;
+    font-size: 25px;
     text-decoration: none;
     padding: 0.5rem;
 
